--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -14,5 +14,6 @@
 @import components/delivery-teaser
 @import components/ask
 @import components/other-comp
+@import components/blog
 
-@import pages/blog
+@import pages/articles
