--- a/src/sass/helpers/_helpers.sass
+++ b/src/sass/helpers/_helpers.sass
@@ -41,3 +41,9 @@ $red: #de4e4e
 // basic trans
 =trs
   transition: .3s
+
+// basic selection
+=sel
+  &::selection
+    color: $white
+    background-color: $red
