--- a/src/sass/helpers/_mixins.sass
+++ b/src/sass/helpers/_mixins.sass
@@ -193,8 +193,8 @@
 =selection
   & ::selection
     @content
-=sel
-  +selection
+//=sel
+//  +selection
 
 =gpu
   transform: translate3d(0, 0, 0)
