--- a/src/templates/partials/_header.jade
+++ b/src/templates/partials/_header.jade
@@ -21,7 +21,7 @@
         +e.A.bar-link._mail(href='#!')
       +e.bar-col
         +e.A.bar-link._cart(href='#!')
-          +b.SPAN.count._cart 11
+          +b.DIV.count._cart 11
       +e.bar-col
         +e.A.bar-link._user(href='#!')
 //END header
