--- a/src/sass/components/_achieve.sass
+++ b/src/sass/components/_achieve.sass
@@ -1,4 +1,7 @@
 .achieve
+	&__container
+		+xs
+			padding: 0 15px
 	&__slider
 		margin: 35px auto 0
 		+r(1365)
@@ -79,6 +82,6 @@
 			+r(424)
 				font-size: 38px
 	&_default
-		padding: 62px 0 80px
+		padding: 68px 0 80px
 		+sm
 			padding: 50px 0 60px
