--- a/src/sass/components/_benefits.sass
+++ b/src/sass/components/_benefits.sass
@@ -1,6 +1,6 @@
 .benefits
 	&__list
-		margin: 53px 0
+		margin: 58px 0 45px
 		font-size: 0
 		text-align: center
 		+sm
@@ -10,7 +10,7 @@
 	&__item
 		display: inline-block
 		vertical-align: top
-		padding: 0 20px 40px
+		padding: 0 20px 45px
 		text-align: center
 		width: 33.33333%
 		+sm
@@ -22,7 +22,7 @@
 			padding: 0 10px 10px
 		&-pic
 			height: 90px
-			margin-bottom: 12px
+			margin-bottom: 5px
 			+vertical
 			+sm
 				margin-bottom: 4px
@@ -59,6 +59,6 @@
 			font-size: 16px
 			color: $grey
 	&_default
-		padding: 65px 0 40px
+		padding: 65px 0 45px
 		+sm
 			padding: 50px 0 10px
