--- a/src/sass/components/_team.sass
+++ b/src/sass/components/_team.sass
@@ -67,6 +67,8 @@
 			font-weight: 500
 			color: $black
 	&__slider
+		+xs
+			padding: 0 10px
 		&-item
 			+r(424)
 				text-align: center
@@ -85,7 +87,7 @@
 			+xs
 				left: -10%
 			+r(424)
-				left: -4%
+				left: -2%
 		.owl-carousel__btn_next
 			right: -19%
 			+r(1439)
@@ -95,7 +97,7 @@
 			+xs
 				right: -10%
 			+r(424)
-				right: -4%
+				right: -2%
 		.owl-carousel__btn-icon
 			font-size: 141px
 			+xs
