--- a/src/sass/components/_testimonials.sass
+++ b/src/sass/components/_testimonials.sass
@@ -19,6 +19,9 @@
 				margin: 0 auto
 			+xs
 				max-width: 400px
+	&__btn
+		padding: 0 5px
+		width: 218px
 	&__slider
 		&-item
 			position: relative
@@ -41,7 +44,7 @@
 			+coverdiv
 			+cover
 			z-index: -1
-		&-link
+		&-btn
 			position: absolute
 			left: 50%
 			bottom: 11%
@@ -119,7 +122,6 @@
 				+xs
 					bottom: 30%
 					right: -1%
-		
 		&-bottom
-			margin: 30px 0 0
+			margin: 26px 0 0
 			text-align: center
