--- a/src/templates/components/_achieve.jade
+++ b/src/templates/components/_achieve.jade
@@ -2,7 +2,7 @@ if achieve ? achieve : achieve = []
 
 //begin achieve
 +b.SECTION.achieve(class= achieve.classMod ? achieve.classMod : '')
-	.container
+	+e.container.container
 		+b.title-md= achieve.title
 		+e.slider.js-achieve-slider.owl-carousel
 			+e.A.slider-item(href='#!')
