--- a/src/sass/pages/_articles.sass
+++ b/src/sass/pages/_articles.sass
@@ -1,5 +1,5 @@
 .articles
-	padding: 60px 0
+	padding: 45px 0 60px
 	&__container
 		display: flex
 		justify-content: space-between
@@ -10,9 +10,10 @@
 	&__title
 		text-align: left
 	&__in
-		margin: 30px 0 20px
+		margin: 25px 0 28px
 		+clr
 		p
+			line-height: 1.2
 			&:not(:last-child)
 				margin-bottom: 20px
 	&__img-wrap
