--- a/src/sass/components/_benefits.sass
+++ b/src/sass/components/_benefits.sass
@@ -42,6 +42,12 @@
 				+s('vehicle')
 			&_handshake::after
 				+s('handshake')
+			&_pc-shield::after
+				+s('pc-shield')
+			&_marker::after
+				+s('marker')
+			&_pen-ruler::after
+				+s('pen-ruler')
 		&-title
 			margin-bottom: 5px
 			font-size: 22px
