--- a/src/sass/components/_other-comp.sass
+++ b/src/sass/components/_other-comp.sass
@@ -153,3 +153,32 @@
 		line-height: 39px
 	&_default
 		margin: 40px 0 20px
+		
+/* ===================================
+	 quality
+	 =================================== */
+.quality
+	position: relative
+	display: flex
+	flex-direction: column
+	align-items: center
+	&__title
+		position: absolute
+		z-index: 2
+		top: 5%
+	&__slider
+		max-width: 1600px
+		margin: 0 auto
+		&-img
+			height: 954px
+		.owl-carousel__btn_prev
+			left: 10%
+		.owl-carousel__btn_next
+			right: 10%
+		.owl-carousel__btn-icon
+			font-size: 140px
+	&__btn
+		position: absolute
+		bottom: 10%
+		z-index: 2
+		padding: 0 21px
