--- a/src/templates/home-page.jade
+++ b/src/templates/home-page.jade
@@ -10,7 +10,7 @@ block content
 	+b.MAIN
 		// begin screen-slider
 		+b.screen-sld
-			+e.IMG(src='img/screen-sld.jpg' style='display: block; margin: 0 auto; width: 100%; max-width: 1600px;')
+			+e.IMG(src='img/screen-sld-1.jpg' style='display: block; margin: 0 auto; width: 100%; max-width: 1600px;')
 		// end screen-slider
 
 		//- benefits
