--- a/src/sass/components/_other-comp.sass
+++ b/src/sass/components/_other-comp.sass
@@ -167,10 +167,10 @@
 		z-index: 2
 		top: 5%
 	&__slider
-		max-width: 1600px
 		margin: 0 auto
 		&-img
-			height: 954px
+			img
+				max-height: 954px
 		.owl-carousel__btn_prev
 			left: 10%
 		.owl-carousel__btn_next
