--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,7 +1,9 @@
 @import helpers/all
 @import generated/sprite-svg
 @import generated/sprite-png
+@import lib/animate
 @import lib/owl
+@import lib/slick
 @import common
 
 @import components/header
@@ -16,5 +18,6 @@
 @import components/other-comp
 @import components/blog
 @import components/work
+@import components/category
 
 @import pages/articles
