--- a/src/sass/components/_category.sass
+++ b/src/sass/components/_category.sass
@@ -28,6 +28,9 @@
 		&-item
 			&:not(:last-child)
 				margin-bottom: 15px
+		&-item.slick-current &-text
+			color: $red
+			border-bottom-color: $red
 		&-text
 			display: inline-block
 			cursor: pointer
@@ -74,4 +77,4 @@
 			display: block
 		
 	&_default
-		padding: 75px 0 165px
+		padding: 75px 0 105px
