--- a/src/templates/souvenirs-page.jade
+++ b/src/templates/souvenirs-page.jade
@@ -17,7 +17,7 @@ block content
 		-
 			var category = {classMod: '_default js-next-section', title: 'мы знаем о сувенирах все', listTitle: 'Категории продуктов:', btnText: 'СМОТРЕТЬ ПОДРОБНЕЕ'};
 			var catList = ['Текстиль', 'Футболки', 'Ежедневники', 'Пишущие пренадлежности', 'Бизнес и офис', 'Сумки, портфели', 'Промо ассорти', 'Текстиль', 'Футболки', 'Ежедневники'];
-			var catViewList = ['category', 'articles-img', 'category', 'category', 'category', 'category', 'category', 'category', 'category', 'category'];
+			var catViewList = ['category', 'category-2', 'category-3', 'category', 'category-2', 'category-3', 'category', 'category-2', 'category-3', 'category'];
 		include components/_category
 
 		//-benefits
