--- a/src/templates/components/_ask.jade
+++ b/src/templates/components/_ask.jade
@@ -5,16 +5,15 @@ if ask ? ask : ask = []
 	+e.container.container
 		+b.H3.title-md= ask.title
 		+e.P.descr= ask.descr
-		+e.FORM(action='#!')
-			+e.form-in
-				+e.form-col
-					+e.form-field.input-style._name
-						+e.INPUT.input(type='text' placeholder='Ваше имя' name='' required)
-					+e.form-field.input-style._email
-						+e.INPUT.input(type='email' placeholder='Ваш e-mail' name='' required)
-				+e.form-col
-					+e.TEXTAREA.form-message.textarea-style(placeholder='Ваш комментарий')
-				+e.form-col
-					+e.BUTTON.submit-btn.btn._red(type='submit') Отправить
-					+e.P.form-descr Мы обработаем Ваш запрос и дадим ответ в течение одного рабочего дня.
+		+e.FORM.form(action='#!')
+			+e.form-col
+				+e.form-field.input-style._name
+					+e.INPUT.input(type='text' placeholder='Ваше имя' name='' required)
+				+e.form-field.input-style._email
+					+e.INPUT.input(type='email' placeholder='Ваш e-mail' name='' required)
+			+e.form-col
+				+e.TEXTAREA.form-message.textarea-style(placeholder='Ваш комментарий')
+			+e.form-col
+				+e.BUTTON.submit-btn.btn._red(type='submit') Отправить
+				+e.P.form-descr Мы обработаем Ваш запрос и дадим ответ в течение одного рабочего дня.
 //end ask
