--- a/src/templates/studio-page.jade
+++ b/src/templates/studio-page.jade
@@ -51,7 +51,7 @@ block content
 		include components/_benefits
 
 		//- quality
-		-var quality = {classMod: '_default', title: 'ВЫСОКОЕ КАЧЕСТВО РАБОТ В 100% СЛУЧАЯХ'};
+		-var quality = {classMod: '_default js-next-section', title: 'ВЫСОКОЕ КАЧЕСТВО РАБОТ В 100% СЛУЧАЯХ', slider: true};
 		include components/_quality
 
 		//- work
