--- a/src/sass/components/_benefits.sass
+++ b/src/sass/components/_benefits.sass
@@ -38,6 +38,7 @@
 			&_building::after
 				+s('building')
 			&_vehicle::after
+				margin-bottom: 10px
 				vertical-align: bottom
 				+s('vehicle')
 			&_handshake::after
@@ -48,6 +49,10 @@
 				+s('marker')
 			&_pen-ruler::after
 				+s('pen-ruler')
+			&_present::after
+				+s('present')
+			&_list::after
+				+s('list')
 		&-title
 			margin-bottom: 5px
 			font-size: 22px
@@ -68,3 +73,5 @@
 		padding: 65px 0 45px
 		+sm
 			padding: 50px 0 10px
+	&_souvenirs
+		padding: 65px 0 63px
