--- a/src/sass/components/_other-comp.sass
+++ b/src/sass/components/_other-comp.sass
@@ -182,3 +182,9 @@
 		bottom: 10%
 		z-index: 2
 		padding: 0 21px
+	&__bg-img
+		+coverdiv
+		+cover
+	&_no-slider
+		position: relative
+		min-height: 954px
