--- a/src/sass/components/_benefits.sass
+++ b/src/sass/components/_benefits.sass
@@ -32,6 +32,7 @@
 				vertical-align: middle
 				margin: 0 auto
 			&_tape::after
+				margin-bottom: 5px
 				+s('tape')
 			&_peoples::after
 				+s('peoples')
@@ -42,6 +43,7 @@
 				vertical-align: bottom
 				+s('vehicle')
 			&_handshake::after
+				margin-bottom: 5px
 				+s('handshake')
 			&_pc-shield::after
 				+s('pc-shield')
@@ -53,6 +55,14 @@
 				+s('present')
 			&_list::after
 				+s('list')
+			&_box::after
+				+s('box')
+			&_push-btn::after
+				margin-bottom: 5px
+				+s('push-btn')
+			&_cards::after
+				+s('cards')
+				
 		&-title
 			margin-bottom: 5px
 			font-size: 22px
