--- a/src/sass/components/_category.sass
+++ b/src/sass/components/_category.sass
@@ -63,11 +63,13 @@
 			height: 300px
 			overflow: hidden
 			img
-				transition: all 500ms ease-in-out
+				transition: all 550ms ease-in-out
 				transform: scale(1.25, 1.25)
+				opacity: .5
 			&.slick-active
 				img
 					transform: scale(1, 1)
+					opacity: 1
 		&-btn
 			margin-top: 20px
 			margin-left: 57px
