--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -19,5 +19,6 @@
 @import components/blog
 @import components/work
 @import components/category
+@import components/history
 
 @import pages/articles
