--- a/src/templates/polygraphy-page.jade
+++ b/src/templates/polygraphy-page.jade
@@ -1,5 +1,5 @@
 ---
-title: Calendars Page
+title: Polygraphy Page
 ---
 extends layouts/_layout
 
@@ -10,7 +10,7 @@ block content
 	+b.MAIN
 		// begin screen-slider
 		+b.screen-sld
-			+e.IMG(src='img/screen-sld-4.jpg' style='display: block; margin: 0 auto; width: 100%; max-height: 800px')
+			+e.IMG(src='img/screen-sld-5.jpg' style='display: block; margin: 0 auto; width: 100%; max-height: 800px')
 		// end screen-slider
 
 		//- category
