--- a/src/templates/about-page.jade
+++ b/src/templates/about-page.jade
@@ -18,42 +18,15 @@ block content
 			var history = {classMod: '_default sect-bg js-next-section', title:'ИСТОРИЯ НАШЕГО УСПЕХА'};
 		include components/_history
 
-		//- benefits
+		//- team
 		-
-			var benefits = {classMod: '_default js-next-section', title: 'НАШ ОПЫТ — ВАША ГАРАНТИЯ КАЧЕСТВА'};
-			var benefitsList = [{
-			picMod: 'tape',
-			title: '21 год',
-			subTitle: 'в отрасли',
-			descrTop: 'Компания "Штрих.ру"',
-			descrBot: 'на рынке с 1996 года.'
-			},{
-			picMod: 'peoples',
-			title: '83',
-			subTitle: 'специалиста',
-			descrTop: 'Высококвалифицированный и',
-			descrBot: 'компетентный персонал компании'
-			},{
-			picMod: 'building',
-			title: '3',
-			subTitle: 'города',
-			descrTop: 'Мы открыли офисы продаж',
-			descrBot: 'в разных городах'
-			},{
-			picMod: 'vehicle',
-			title: '52 региона',
-			subTitle: 'отгрузки',
-			descrTop: 'Доставляем продкуцию',
-			descrBot: 'по регионам'
-			}
-			,{
-			picMod: 'handshake',
-			title: '967',
-			subTitle: 'компаний',
-			descrTop: 'Работают с нами',
-			descrBot: 'на постоянной основи'
-			}];
-		include components/_benefits
+			var team = {classMod: '_default js-next-section', title: 'НАДЕЖНАЯ КОМАНДА — ЗАЛОГ КАЧЕСТВЕННОЙ УСЛУГИ'}
+		include components/_team
+
+		//- achieve
+		-
+			var achieve = {classMod: '_default sect-bg', title: 'ЗАВОЕВАННЫЕ НАМИ "ВЫСОТЫ"'}
+		include components/_achieve
 
 		//- delivery
 		-var deliveryTeaser = {classMod: '_souvenirs', title: 'Доставляем более чем по 90 регионам'}
