--- a/src/sass/components/_other-comp.sass
+++ b/src/sass/components/_other-comp.sass
@@ -188,3 +188,22 @@
 	&_no-slider
 		position: relative
 		min-height: 954px
+		
+/* clients
+	----------------------------------- */
+.clients
+	&__list
+		display: flex
+		justify-content: space-between
+		flex-wrap: wrap
+		margin: 20px 0 0
+		&-item
+			display: flex
+			align-items: center
+			justify-content: center
+			width: (100% / 6)
+			margin-bottom: 20px
+			img
+				width: auto
+	&_default
+		padding: 70px 0 100px
