--- a/src/templates/about-page.jade
+++ b/src/templates/about-page.jade
@@ -14,23 +14,20 @@ block content
 		// end screen-slider
 
 		//- history timeline
-		-
-			var history = {classMod: '_default sect-bg js-next-section', title:'ИСТОРИЯ НАШЕГО УСПЕХА'};
+		-var history = {classMod: '_default sect-bg js-next-section', title:'ИСТОРИЯ НАШЕГО УСПЕХА'};
 		include components/_history
 
 		//- team
-		-
-			var team = {classMod: '_default js-next-section', title: 'НАДЕЖНАЯ КОМАНДА — ЗАЛОГ КАЧЕСТВЕННОЙ УСЛУГИ'}
+		-var team = {classMod: '_default js-next-section', title: 'НАДЕЖНАЯ КОМАНДА — ЗАЛОГ КАЧЕСТВЕННОЙ УСЛУГИ'}
 		include components/_team
 
 		//- achieve
-		-
-			var achieve = {classMod: '_default sect-bg', title: 'ЗАВОЕВАННЫЕ НАМИ "ВЫСОТЫ"'}
+		-var achieve = {classMod: '_default sect-bg', title: 'ЗАВОЕВАННЫЕ НАМИ "ВЫСОТЫ"'}
 		include components/_achieve
 
-		//- delivery
-		-var deliveryTeaser = {classMod: '_souvenirs', title: 'Доставляем более чем по 90 регионам'}
-		include components/_delivery-teaser
+		//- clients
+		-var clients = {classMod: '_default js-next-section', title: 'НАШИ КЛИЕНТЫ'}
+		include components/_clients
 
 		//- ask
 		-var ask = {classMod: '_default sect-bg', title: 'Есть, что спросить?', descr: 'Ответим на любые Ваши вопросы'};
