--- a/src/templates/components/_history.jade
+++ b/src/templates/components/_history.jade
@@ -1,7 +1,7 @@
 if history ? history : history = []
 
 //begin history
-+b.history(class= history.classMod ? history.classMod : '')
++b.SECTION.history(class= history.classMod ? history.classMod : '')
 	+e.container.container
 		+b.title-md= history.title
 		+b.history-timeline.js-history-timeline
