--- a/src/sass/components/_history.sass
+++ b/src/sass/components/_history.sass
@@ -58,12 +58,22 @@
 			border-radius: 50%
 			background-color: transparent
 			cursor: pointer
-			pointer-events: none
 			+gpu
 			&::before
 				left: 7px
+				content: ''
+				position: absolute
+				background: #cccecf
+				width: 1px
+				height: 10px
+				bottom: -13px
 			&::after
-				display: none
+				position: absolute
+				top: 14px
+				left: -12px
+				content: ''
+				height: 20px
+				width: 40px
 			&.slick-active
 				background-color: $red
 				border-color: $white
@@ -77,7 +87,6 @@
 				span::after, button::before
 					display: none
 		button
-			pointer-events: all
 			position: absolute
 			left: -7px
 			bottom: -30px
@@ -100,7 +109,7 @@
 				&::after
 					right: -44px
 					bottom: 17px
-		span, button, li
+		span, button
 			&::before, &::after
 				content: ''
 				position: absolute
@@ -108,7 +117,9 @@
 				width: 1px
 				height: 10px
 				bottom: -13px
-				
+	.slick-track
+		cursor: default
+		
 @keyframes myFlip
 	from
 		transform: perspective(400px) rotate3d(0, 1, 0, 120deg)
