--- a/src/sass/components/_benefits.sass
+++ b/src/sass/components/_benefits.sass
@@ -84,6 +84,9 @@
 			color: $black
 			+sm
 				font-size: 19px
+			sup
+				vertical-align: super
+				font-size: 15px
 		&-sub-title
 			margin-bottom: 5px
 			font-size: 16px
@@ -92,6 +95,11 @@
 		&-descr
 			font-size: 16px
 			color: $grey
+			+sm
+				font-size: 15px
+			p
+				+md
+					display: inline
 	&__slider
 		&-item
 			height: 132px
