--- a/src/templates/studio-page.jade
+++ b/src/templates/studio-page.jade
@@ -1,5 +1,5 @@
 ---
-title: Articles Page
+title: Studio Page
 ---
 extends layouts/_layout
 
@@ -30,7 +30,8 @@ block content
 			descrBot: 'от простого макетирования до создания индивидуальных сложных проектов.'
 			},{
 			picMod: 'marker',
-			title: '55,8 км2',
+			title: '55,8 км',
+			titleSymbol: 2,
 			subTitle: 'дизайна за время работы',
 			descrTop: 'Мы набили руку в этой сфере',
 			descrBot: 'и готовы предоставить свой опыт вам'
